# backend/docs/swagger.json
@@ -71,7 +71,7 @@
                 }
             }
         },
-        "/api/dogs/{dog_id}/candidates": {
+        "/api/dogs/{id}/candidates": {
             "get": {
                 "security": [
                     {
@@ -89,7 +89,7 @@
                     {
                         "type": "integer",
                         "description": "Dog ID",
-                        "name": "dog_id",
+                        "name": "id",
                         "in": "path",
                         "required": true
                     }
@@ -105,7 +105,7 @@
                 }
             }
         },
-        "/api/dogs/{dog_id}/matches": {
+        "/api/dogs/{id}/matches": {
             "get": {
                 "security": [
                     {
@@ -123,7 +123,7 @@
                     {
                         "type": "integer",
                         "description": "Dog ID",
-                        "name": "dog_id",
+                        "name": "id",
                         "in": "path",
                         "required": true
                     }
